# smart-commit

./: LICENSE  README.md  pyproject.toml
smart_commit/: cli.py
