[project]
name = "smart-commit"
version = "0.0.1"
description = "Smart Git commit message generator for automation and framework projects."
authors = [
  { name = "ElzaJose", email = "elizabethjose3092@gmail.com" }
]
requires-python = ">=3.7"
readme = "README.md"
license = { text = "MIT" }

[tool.setuptools.packages.find]
include = ["smart_commit"]

[project.scripts]
smart-commit = "smart_commit.cli:main"
